--- a/src/morse_input/morse_decode.ipynb
+++ b/src/morse_input/morse_decode.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 1,
    "id": "7b74f7fb-26eb-411e-8871-a8f7b4e94910",
    "metadata": {},
    "outputs": [
@@ -134,7 +134,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -148,7 +148,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.11.8"
   }
  },
  "nbformat": 4,
